<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".QuizTextActivity">

    <ImageView
        android:id="@+id/imageViewLose"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/textViewQuestion"
        android:src="@drawable/lose_image" />

    <ImageView
        android:id="@+id/imageViewWin"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/textViewQuestion"
        android:src="@drawable/win_image" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/score"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewIncorrectAnswer"
        app:layout_constraintEnd_toStartOf="@+id/textViewRemainTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Счёт: 10 / 100" />

    <TextView
        android:id="@+id/textViewRemainTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/remain_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewScore"
        app:layout_constraintTop_toTopOf="@+id/textViewScore"
        tools:text="Оставшееся время: 15" />

    <TextView
        android:id="@+id/textViewCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/green"
        android:padding="8dp"
        android:text="@string/answer_correct"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScore"
        tools:layout_editor_absoluteY="46dp"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textViewIncorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/round_shape_red"
        android:padding="8dp"
        android:text="@string/answer_incorrect"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScore"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:gravity="center"
        android:text="@string/textQuestion"
        android:textSize="54sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIncorrectAnswer"
        tools:text="10 + 5 = ?" />

    <TextView
        android:id="@+id/textViewQuestionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/type_answer"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <EditText
        android:focusable="false"
        android:id="@+id/editTextUserAnswer"
        android:layout_width="120dp"
        app:flow_verticalAlign="center"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayoutNumberPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionLabel" />

    <GridLayout
        android:id="@+id/gridLayoutNumberPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserAnswer">

        <Button
            android:layout_margin="3dp"
            android:text="@string/_1"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_2"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_3"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_4"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_5"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_6"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_7"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_8"
            android:textSize="24sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_9"
            android:textSize="24sp" />

        <Button
            android:layout_width="88dp"
            android:layout_height="52dp"
            android:layout_margin="3dp"
            android:text="@string/del"
            android:textSize="22sp" />

        <Button
            android:layout_margin="3dp"
            android:text="@string/_0"
            android:textSize="24sp" />

        <Button
            android:layout_width="88dp"
            android:layout_height="52dp"
            android:layout_margin="3dp"
            android:text="@string/ok"
            android:textSize="22sp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>